feat: Integrate markdown rendering for chat messages
Adds `react-markdown` and `remark-gfm` to enable markdown formatting in chat messages.
Updates `index.html` to include the necessary Tailwind CSS typography plugin for better markdown styling.
Adjusts chat message styling slightly to accommodate markdown content.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WIC Campus Wiki</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -87,7 +87,9 @@
     "leaflet": "https://unpkg.com/leaflet@1.9.4/dist/leaflet-src.esm.js",
     "emoji-picker-react": "https://aistudiocdn.com/emoji-picker-react@^4.9.2",
     "pako": "https://esm.sh/pako@2.1.0",
-    "lottie-react": "https://esm.sh/lottie-react@2.4.0?external=react,react-dom"
+    "lottie-react": "https://esm.sh/lottie-react@2.4.0?external=react,react-dom",
+    "react-markdown": "https://esm.sh/react-markdown@9?bundle",
+    "remark-gfm": "https://esm.sh/remark-gfm@4?bundle"
   }
 }
 </script>
